labs/lab_k8s/fortune_redis_ss.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fortune-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortune-redis
  serviceName: fortune-redis-service
  template:
    metadata:
      name: fortune-redis
      labels:
        app: fortune-redis
        deployment: pks-workshop
    spec:
      containers:
      - name: fortune-redis
        image: redis
        ports:
        - containerPort: 6379
          name: redis
