labs/lab_k8s/fortune_deploy.yml

apiVersion: v1
kind: Service
metadata:
  name: fortune-deploy-service
  labels:
    app: fortune-deploy
    deployment: pks-workshop
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: ui
    - port: 9080
      name: backend
  selector:
    app: fortune-deploy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-deploy
  labels:
    app: fortune-deploy
    deployment: pks-workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fortune-deploy
  template:
    metadata:
      name: fortune-deploy
      labels:
        app: fortune-deploy
        deployment: pks-workshop
        # note: forRolloutTest
    spec:
      containers:
        - name: ui
          image: azwickey/fortune-ui:latest
          ports:
            - containerPort: 80
              protocol: TCP
        - name: backend
          image: azwickey/fortune-backend-jee:latest
          ports:
            - containerPort: 9080
              protocol: TCP
