labs/lab_k8s/fortune_pod.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fortune-pod
    deployment: pks-workshop
  name: fortune-pod-service
spec:
  ports:
  - port: 80
    name: ui
  - port: 9080
    name: backend
  - port: 6379
    name: redis
  type: LoadBalancer
  selector:
    app: fortune-pod
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: fortune-pod
    deployment: pks-workshop
  name: fortune-pod
spec:
  containers:
  - image: azwickey/fortune-ui:latest
    name: fortune-ui
    ports:
    - containerPort: 80
      protocol: TCP
  - image: azwickey/fortune-backend-jee:latest
    name: fortune-backend
    ports:
    - containerPort: 9080
      protocol: TCP
  - image: redis
    name: redis
    ports:
    - containerPort: 6379
      protocol: TCP
