labs/lab_k8s/fortune_redis_pv.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
    tier: backend
    # role: master
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    tier: backend
    # role: master
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        # role: master
        tier: backend
    spec:
      containers:
      - name: redis
        # image: gcr.io/google_containers/redis:e2e  # or just image: redis
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: "/data" # This is the default for redis
          name: ci-data
      volumes:
        - name: ci-data
          persistentVolumeClaim:
            claimName: ci-claim
